tests/snapshots/codegen_snapshot_tests__issue950_builtin_zip_only.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn score_pairs(left: Vec<i64>, right: Vec<i64>) -> i64 {
    let _ = "Compute a score through builtin zip without invoking an iterator method.";
    let mut score = 0;
    for pair in {
        let mut __incan_iter = crate::__incan_std::derives::collection::ZipIterator {
            left: (crate::__incan_std::derives::collection::ListIterator {
                items: (left),
                index: 0i64,
            }),
            right: (crate::__incan_std::derives::collection::ListIterator {
                items: (right),
                index: 0i64,
            }),
            left_marker: None,
            right_marker: None,
        };
        std::iter::from_fn(move || crate::__incan_std::derives::collection::Iterator::__next__(
            &mut __incan_iter,
        ))
    } {
        score = score + pair.0 * pair.1;
    }
    return score;
}
fn print_named_values(names: Vec<String>, values: Vec<i64>) {
    let _ = "Exercise the explicit builtin namespace without invoking an iterator method.";
    for pair in {
        let mut __incan_iter = crate::__incan_std::derives::collection::ZipIterator {
            left: (crate::__incan_std::derives::collection::ListIterator {
                items: (names),
                index: 0i64,
            }),
            right: (crate::__incan_std::derives::collection::ListIterator {
                items: (values),
                index: 0i64,
            }),
            left_marker: None,
            right_marker: None,
        };
        std::iter::from_fn(move || crate::__incan_std::derives::collection::Iterator::__next__(
            &mut __incan_iter,
        ))
    } {
        let _ = println!(
            "{}", { let __parts : [& str; 3usize] = ["", ":", ""]; let __args : Vec <
            String > = vec![format!("{}", pair.0), format!("{}", pair.1)];
            incan_stdlib::strings::fstring(& __parts, & __args) }
        );
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = "Exercise both direct builtin zip spellings through generated stdlib support.";
    let _ = println!("{}", score_pairs(vec![1, 2], vec![3, 4]));
    let _ = print_named_values(vec!["alpha".to_string(), "beta".to_string()], vec![1]);
}
