tests/snapshots/codegen_snapshot_tests__issue963_set_add.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let mut seen: std::collections::HashSet<String> = std::collections::HashSet::new();
    let _ = {
        (&mut seen).insert("value".to_string());
    };
    let _ = {
        (&mut seen).insert("value".to_string());
    };
    let _ = println!("{}", ::std::convert::identity(seen.len() as i64));
}
