tests/snapshots/codegen_snapshot_tests__issue_806.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use ::rubato::Fft;
pub fn test_fft() -> Fft<f32> {
    let fft = Fft::<f32>::new(1024);
    return fft;
}
