tests/snapshots/codegen_snapshot_tests__list_pop_clone_only_model.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Clone, Debug, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct PopRegressItem {
    id: i64,
}
impl incan_stdlib::reflection::HasClassName for PopRegressItem {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for PopRegressItem {
    fn __class_name__() -> &'static str {
        "PopRegressItem"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for PopRegressItem {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for PopRegressItem {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("id"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("id"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for PopRegressItem {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "id" => Some(format!("{}", self.id)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("id".to_string(), format!("{}", self.id))]
    }
}
fn drain_items() {
    let mut xs: Vec<PopRegressItem> = vec![PopRegressItem { id : 1 }];
    while ::std::convert::identity(xs.len() as i64) > 0 {
        let item: PopRegressItem = incan_stdlib::collections::__private::list_pop(
            &mut xs,
        );
        let _ = println!("{}", item.id);
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = drain_items();
}
