tests/snapshots/codegen_snapshot_tests__literals.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn test_literals() {
    let _x: i64 = 42;
    let _y: i64 = -10;
    let _big: i64 = 1000000;
    let _pi: f64 = 3.14;
    let _neg: f64 = -2.5;
    let _sci: f64 = 15000000000.0;
    let _greeting: String = "hello".to_string();
    let _multiline: String = "hello\nworld".to_string();
    let _quote: String = "single".to_string();
    let _yes: bool = true;
    let _no: bool = false;
    let _maybe: Option<i64> = None::<i64>;
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = test_literals();
}
